# TextEditor

./: CMakeCache.txt  CMakeLists.txt  InsertText.cpp  InsertText.h  Makefile  ModifyText.cpp  ModifyText.h  Regex.cpp  Regex.h  StringManipulator.cpp  StringManipulator.h  TextEditor  TextHighLight.cpp  TextHighLight.h  Utils.cpp  Utils.h  WindowForm.cpp  WindowForm.h  cmake_install.cmake  config.json  main.cpp  main.exe.stackdump  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc.depends  texteditor.exe.stackdump
Documentation/html/: _availability_8h_source.html  _cursor_group_8h_source.html  _editor_interface_8h_source.html  _file_status_8h_source.html  _insert_text_8h_source.html  _modify_text_8h_source.html  _plugin_manager_8h_source.html  _punctuation_mark_8h_source.html  _settings_manager_8h_source.html  _string_manipulator_8h_source.html  _tab_widget_8h_source.html  _text_high_light_8h_source.html  _theme_8h_source.html  _utils_8h_source.html  annotated.html  class_availability-members.html  class_availability.html  class_availability__coll__graph.dot  class_availability__coll__graph.md5  class_availability__inherit__graph.dot  class_cursor_group-members.html  (+82 more)
TextEditor_autogen/: moc_predefs.h
UnitTests/: CMakeCache.txt  CMakeLists.txt  Makefile  PunctuationMark.cpp  PunctuationMark.h  StringManipulator.cpp  StringManipulator.h  TestTextEditor.cpp  TestTextEditor.h  TextHighLight.cpp  TextHighLight.h  Utils.cpp  cmake_install.cmake  comanda.txt  main_test.cpp  test
highlight_files/: keywords  types.txt
src/: Availability.cpp  Availability.h  CursorGroup.cpp  CursorGroup.h  EditorInterface.h  FileStatus.cpp  FileStatus.h  HighLighter.cpp  HighLighter.h  ModifyText.cpp  ModifyText.h  PluginManager.cpp  PluginManager.h  PunctuationMark.cpp  PunctuationMark.h  SettingsManager.cpp  SettingsManager.h  StringManipulator.cpp  StringManipulator.h  TabWidget.cpp  TabWidget.h  TextHighLight.cpp  TextHighLight.h  Theme.cpp  Theme.h  Utils.h  filestatus.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
(+120 files in other folders)
